# EasyGL

./: CMakeLists.txt  main.cpp
include/: EGL.h  EGL_Func.h  EGL_Graphics.h  EGL_Physics.h  EGL_Structs.h  EGL_Window.h
include/Classes/: EGL_Game.h  EGL_Hitbox.h  EGL_Input.h  EGL_Mesh.h  EGL_Object.h  EGL_Physics.h  EGL_PhysicsObject.h  EGL_Poly.h  EGL_Render.h  EGL_Shader.h  EGL_Text.h  EGL_Window.h
include/Classes/EGL_Object/: EGL_Object.h  EGL_PhysicsObject.h
include/Structs/: EGL_Color.h  EGL_Point.h  EGL_Vector.h  EGL_Vertex.h
shaders/: basic_shader.fs  basic_shader.vs
src/: EGL_Func.cpp  EGL_Hitbox.cpp  EGL_Mesh.cpp  EGL_PhysicsObject.cpp  EGL_Point.cpp  EGL_Polar.cpp  EGL_Poly.cpp  EGL_Shader.cpp  EGL_Window.cpp
src/Classes/: EGL_Game.cpp  EGL_Hitbox.cpp  EGL_Input.cpp  EGL_Mesh.cpp  EGL_Object.cpp  EGL_Physics.cpp  EGL_PhysicsObject.cpp  EGL_Poly.cpp  EGL_Render.cpp  EGL_Shader.cpp  EGL_Text.cpp  EGL_Window.cpp
src/Classes/EGL_Object/: EGL_Object.cpp  EGL_PhysicsObject.cpp
src/Structs/: EGL_Point.cpp  EGL_Vector.cpp
